src/team-apps/mlops/mlflow/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow-route
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: istio-ingress
  hostnames:
    - mlflow.mlops.internal.opencloudhub.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ""
          kind: Service
          name: mlflow-tracking
          port: 80
          weight: 1
